--- a/mysite/app/templates/home.html
+++ b/mysite/app/templates/home.html
@@ -4,7 +4,8 @@
     <title>Map</title>
 </head>
 <body>
-    <h1>My Map</h1>
+    <h1>Map</h1>
     {{ map|safe }}
+    <a href="{% url 'chart' %}">Go to Chart</a>
 </body>
 </html>
